--- a/file/game.ipynb
+++ b/file/game.ipynb
@@ -20,185 +20,7 @@
      "output_type": "stream",
      "text": [
       "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 3\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Six of Diamonds\n",
-      "\n",
-      "Player's Hand:\n",
-      " Two of Diamonds\n",
-      " Nine of Spades\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Six of Diamonds\n",
-      "\n",
-      "Player's Hand:\n",
-      " Two of Diamonds\n",
-      " Nine of Spades\n",
-      " Two of Clubs\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Six of Diamonds\n",
-      "\n",
-      "Player's Hand:\n",
-      " Two of Diamonds\n",
-      " Nine of Spades\n",
-      " Two of Clubs\n",
-      " Queen of Clubs\n",
-      "Player busts!\n",
-      "\n",
-      "Player's winnings stand at 97\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 2\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Jack of Spades\n",
-      "\n",
-      "Player's Hand:\n",
-      " Ten of Clubs\n",
-      " Ace of Clubs\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' s\n",
-      "Player stands. Dealer is playing.\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Jack of Spades\n",
-      "\n",
-      "Player's Hand:\n",
-      " Ten of Clubs\n",
-      " Ace of Clubs\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " Four of Diamonds\n",
-      " Jack of Spades\n",
-      " Three of Clubs\n",
-      "Dealer's Hand = 17\n",
-      "\n",
-      "Player's Hand:\n",
-      " Ten of Clubs\n",
-      " Ace of Clubs\n",
-      "Player's Hand = 21\n",
-      "Player wins!\n",
-      "\n",
-      "Player's winnings stand at 102\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 5\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Eight of Hearts\n",
-      "\n",
-      "Player's Hand:\n",
-      " Jack of Spades\n",
-      " Jack of Diamonds\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' s\n",
-      "Player stands. Dealer is playing.\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Eight of Hearts\n",
-      "\n",
-      "Player's Hand:\n",
-      " Jack of Spades\n",
-      " Jack of Diamonds\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " Queen of Hearts\n",
-      " Eight of Hearts\n",
-      "Dealer's Hand = 18\n",
-      "\n",
-      "Player's Hand:\n",
-      " Jack of Spades\n",
-      " Jack of Diamonds\n",
-      "Player's Hand = 20\n",
-      "Player wins!\n",
-      "\n",
-      "Player's winnings stand at 105\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 2\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Nine of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Seven of Clubs\n",
-      " Four of Hearts\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Nine of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Seven of Clubs\n",
-      " Four of Hearts\n",
-      " Six of Hearts\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' h\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Nine of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Seven of Clubs\n",
-      " Four of Hearts\n",
-      " Six of Hearts\n",
-      " Six of Spades\n",
-      "Player busts!\n",
-      "\n",
-      "Player's winnings stand at 98\n",
-      "Would you like to play another hand? Enter 'y' or 'n' y\n",
-      "Welcome to BlackJack! Get as close to 21 as you can without going over!\n",
-      "    Dealer hits until she reaches 17. Aces count as 1 or 11.\n",
-      "How many chips would you like to bet? 50\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Two of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Ace of Diamonds\n",
-      " Queen of Clubs\n",
-      "Would you like to Hit or Stand? Enter 'h' or 's' s\n",
-      "Player stands. Dealer is playing.\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " <card hidden>\n",
-      " Two of Clubs\n",
-      "\n",
-      "Player's Hand:\n",
-      " Ace of Diamonds\n",
-      " Queen of Clubs\n",
-      "\n",
-      "Dealer's Hand:\n",
-      " Two of Diamonds\n",
-      " Two of Clubs\n",
-      " Eight of Diamonds\n",
-      " Four of Clubs\n",
-      " Six of Diamonds\n",
-      "Dealer's Hand = 22\n",
-      "\n",
-      "Player's Hand:\n",
-      " Ace of Diamonds\n",
-      " Queen of Clubs\n",
-      "Player's Hand = 21\n",
-      "Dealer busts!\n",
-      "\n",
-      "Player's winnings stand at 150\n"
+      "    Dealer hits until they reaches 17. Aces count as 1 or 11.\n"
      ]
     }
    ],
